@@ -1,3 +1,14 @@
+2024-11-26  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-wrong-passwd-regexp): Add fingerprint messages.
+	(tramp-fingerprint-prompt-regexp, tramp-use-fingerprint):
+	New defcustoms.
+	(tramp-action-fingerprint, tramp-action-show-message): New defuns.
+	(tramp-action-show-and-confirm-message): Start check at (point-min).
+
+	* tramp-sh.el (tramp-actions-before-shell):
+	Use `tramp-fingerprint-prompt-regexp'.
+
 2024-11-23  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-initial-file-name-regexp)
